# NLP---Spring-1404

./: .gitignore  QA for validation from Events and Treaties.json  QA__WAR1__WAR2.json  analysis.ipynb  pyproject.toml  template.json
Bushehr/: Asaluyeh.json  Dashti.json  Deylam.json  Deyr.json  Ganaveh.json  بوشهر.txt
Crawl/: Web.ipynb  fars.ipynb  kohgiluyeh_and_boyerahmad.ipynb  llama3_RAG.ipynb  wiki_crawler.ipynb
Crawl/.ipynb_checkpoints/: Web-checkpoint.ipynb
Isfahan/: Ardestan.json  Borkhar.json  Dehaqan.json  Faridan.json  Golpayegan.json  Khomeynishahr.json  Khur-and-Biabanak.json  Semirom.json  Shahinshahr.json  Shahreza.json  Varzaneh.json
LLMs/chatgpt-books/: chaharmahal_o_bakhtiari_filled.json
LLMs/deepseek-web/: booshehr.json  chaharmahal_o_bakhtiari.json  fars.json
chaharmahal-o-bakhtiari/data/: آبشار آتشگاه  آلونی  اردل  ارمند  استان اصفهان  استان خوزستان  استان کرمان  استان کهگیلویه و بویراحمد  استان یزد  استانداری چهارمحال و بختیاری  اصفهان  امامزاده حمزه علی  ایران مرکزی  باباحیدر  بازفت  بختیاری  بخش ارمند  بخش امامزاده حسن  بخش باباحیدر  بخش بازفت  بخش بلداجی  بخش جونقان  بخش دستگرد  بخش دوآب صمصامی  بخش زاینده‌رود  بخش شیدا  بخش لاران  بخش مرکزی شهرستان اردل  بخش مرکزی شهرستان بروجن  بخش مرکزی شهرستان بن  (+137 more)
crawlers/: book_crawler.ipynb  wiki_crawler.ipynb
fars/: fars.txt
hw1/: README.md  template.json
hw2/: evaluation_metrics.json  qa_results.json  template.json
hw3/: evaluation.xlsx  record.json
kohgiluyeh-o-boyerahmad/: kohgiluyeh-o-boyerahmad.txt
outputs/: structure_checking.py
raw-data/: booshehr.txt  hormozgan.txt
(+655 files in other folders)
