[tool.poetry]
name = "nlp-spring1404"
version = "0.1.0"
description = ""
authors = ["ali <a.sharifi1379@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "0.0.2"
wikipedia-api = "0.8.1"
jupyter = "^1.1.1"
beautifulsoup4 = "^4.13.4"
pymupdf = "^1.25.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
