[tool.poetry]
name = "nlp-spring-1404"
version = "0.1.0"
description = ""
authors = ["ali <a.sharifi1379@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
hazm = "^0.10.0"
scipy = "<1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
